增加shell启动脚本